--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "axios": "^0.24.0",
     "core-js": "^3.6.5",
+    "lil-gui": "^0.16.1",
     "three": "^0.136.0",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
